# garagem

./: db.sqlite3  manage.py  pyproject.toml
core/: admin.py  models.py  serializers.py  views.py
core/migrations/: 0001_initial.py  0002_marcas.py  0003_carro_categoria_marca_delete_marcas_and_more.py
garagem/: asgi.py  settings.py  urls.py  wsgi.py
