[tool.poetry]
name = "garagem"
version = "0.1.0"
description = ""
authors = ["yasmin <yasmarcelino91@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.0.5"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
